Get markers back while list items have overflow:hidden children

Add marker into list item not overflow:hidden child while construct
layout tree.

BUG=626293

Review-Url: https://codereview.chromium.org/2759883002
Cr-Commit-Position: refs/heads/master@{#459372}

Former-commit-id: fd1e60f0bee4b6b25d898f4f4f859aa38d1a9643